[package]
name = "samplableset-rs"
version = "0.9.0"
edition = "2024"
# readme = "README.md"
# license = { text = "MIT" }

[lib]
name = "samplableset_rs"
# This could be adjusted to only compile rlib unless 
# py_bind or c_bind is enabled using a build.rs script.
# However, it would be an extremely hacky build script.
crate-type = ["cdylib", "rlib"]

[features]
default = ["py_bind"]
share_rng = []
c_bind = []
py_bind = ["dep:pyo3"]

[dependencies]
rand = "0.9"
rand_pcg = "0.9"

pyo3 = { version = "0.25.*", features = ["extension-module"], optional = true }